rm unused files

--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,3 @@
 USER = work.pushkarkhare@gmail.com
 PASS = jxvkgzhinkmrdode
+MONGODB_URI = mongodb+srv://kharepushkar2804:XT2tblk8gbAnp1a6@cluster0.2rqs7yg.mongodb.net/taskDB
